# esp-idf-simplefoc

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  idf_component.yml
include/adc/: ADC.hpp  Channel.hpp
include/foc/current_sensor/: BaseCurrentSensor.hpp  CurrentSensorBase.hpp  InlineCurrentSensor.hpp  LowSideCurrentSensor.hpp
include/foc/current_sensor/interface/: CurrentSensor.hpp
include/foc/driver/: BLDCDriver3PWM.hpp  BLDCDriver6PWM.hpp  DriverBase.hpp  StepperDriver2PWM.hpp  StepperDriver4PWM.hpp
include/foc/driver/interface/: BLDCDriver.hpp  Driver.hpp  StepperDriver.hpp
include/foc/encoder/: BaseEncoder.hpp  EncoderBase.hpp
include/foc/encoder/interface/: Encoder.hpp
include/foc/motor/: BLDCMotor.hpp  BaseMotor.hpp  MotorBase.hpp  StepperMotor.hpp
include/foc/motor/interface/: Motor.hpp
include/foc/utils/: LowPassFilter.hpp
src/: ADC.cpp  Channel.cpp  CurrentSensorBase.cpp  DriverBase.cpp  EncoderBase.cpp  LowPassFilter.cpp  MotorBase.cpp
src/current_sensor/: BaseCurrentSensor.cpp  InlineCurrentSensor.cpp  LowSideCurrentSensor.cpp
src/driver/: BLDCDriver3PWM.cpp  BLDCDriver6PWM.cpp  StepperDriver2PWM.cpp  StepperDriver4PWM.cpp
src/encoder/: BaseEncoder.cpp
src/motor/: BLDCMotor.cpp  BaseMotor.cpp  StepperMotor.cpp
